--- a/contato.html
+++ b/contato.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="assets/css/default.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Inter Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 </head>
-<body style="font-family: malgun, sans-serif; width: 100%; height: 100%; background-color: #cfc5c5;">
+<body style="font-family: Inter; width: 100%; height: 100%; background-color: #cfc5c5;">
     <div style="display: flex; flex-direction: column; min-height: 100vh;">
 
         <div class="header">
-            <p style="margin-bottom: 0;">Entre em Contato: <label style="font-weight: bold;"> (11) 4789-0979</label></p>
+            <marquee><p style="padding-top: 0.5em;">Atualize seus dados cadastrais e participe das <label style="font-weight: bold;">Eleições Online</label> da <label style="font-weight: bold;">OAB SP</label></p>
+            </marquee>
         </div>
     
         <!-- Navbar -->
