Adição de Páginas Club e Comissões

--- a/dirExecutiva.html
+++ b/dirExecutiva.html
@@ -15,17 +15,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body style="font-family: Inter; width: 100%; height: 100%; font-weight: normal; background-color: #cfc5c5;">
     <div style="display: flex; flex-direction: column; min-height: 100vh;">
 
         <div class="header">
-            <marquee><a href="https://www2.oabsp.org.br/asp/dotnet/LoginSite/LoginMain.aspx" class="no-link-style"
-                    target="_blank">
+            <marquee><a href="https://www2.oabsp.org.br/asp/dotnet/LoginSite/LoginMain.aspx" class="no-link-style" target="_blank">
                     <p style="padding-top: 0.5em;">Atualize seus dados cadastrais e participe das <label
                             style="font-weight: bold;"> Eleições Online</label> da <label style="font-weight: bold;">OAB
                             SP</label></p>
@@ -135,7 +131,7 @@
                     </div>
 
                     <div class="col-md-6 mt-4 mt-md-2 align-content-center">
-                        <a href="club.html" target="_blank" class="no-link-style">
+                        <a href="#" target="_blank" class="no-link-style">
 
                             <div class="d-flex flex-row align-items-center icons-fast-access">
 
