--- a/comissoes.html
+++ b/comissoes.html
@@ -36,40 +36,39 @@
         <!-- Navbar -->
         <div id="navbar"></div>
 
-        <!-- Carrossel -->
+        <h1 class="d-flex justify-content-center" id="title-comissoes">Comissões</h1>
 
-        <div class="main-content align-content-center" style="background-color: #182933;">
-            <div class="col-12 col-md-6 mx-auto align-items-center">
-                <div id="carouselImgs" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="assets/images/home/banner-OABJandira.png" class="d-block w-100 img-fluid"
-                                alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/images/home/banner-EleiçõesOAB.png" class="d-block w-100 img-fluid"
-                                alt="...">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselImgs"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselImgs"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+        <!-- Acordeão -->
+
+        <div class="d-flex justify-content-center">
+            <div class="acordeao">
+                <button class="acordeao-header">
+                    <span class="title-comissoes">
+                        COMISSÃO DA JOVEM ADVOCACIA
+                    </span>
+                    <i class="fa-solid fa-chevron-down arrow"></i>
+                </button>
+
+                <div class="acordeao-body">
+                    <span class="acordeao-body-title">Presidente</span>
+                    <p>Dra. Fernanda Scopim<br>
+                        E-mail: fscopim@gmail.com</p>
+                    <span class="acordeao-body-title2">Vice Presidente</span>
+                    <p>Dr. Anderson Oliveira da Silva</p>
+                    <span class="acordeao-body-title2">Redes Sociais</span><br>
+                    <a href="#"><img src="assets/icons/icon-Instagram.svg" width="20px"></a><br>
+                    <span class="acordeao-body-title2">Membros Efetivos</span>
+                    <p class="p-body">Dra. Caroline Ingrid de Lima Gregório<br>
+                        Dra. Daniele Aparecida dos Santos Silva<br>
+                        Dra. Denise Lopes dos Santos<br>
+                        Dr. Kauê Teixeira Ventura Monteiro<br>
+                        Dra. Sarah Cristina Duarte Fortis<br>
+                        Dra. Sara Raiane de Souza Alves Barbosa<br>
+                        Dra. Priscila da Silva</p>
                 </div>
             </div>
         </div>
+
 
 
         <!-- Acesso Rápido -->
@@ -135,7 +134,7 @@
                     </div>
 
                     <div class="col-md-6 mt-4 mt-md-2 align-content-center">
-                        <a href="club.html" target="_blank" class="no-link-style">
+                        <a href="#" target="_blank" class="no-link-style">
 
                             <div class="d-flex flex-row align-items-center icons-fast-access">
 
