--- a/contato.html
+++ b/contato.html
@@ -16,17 +16,10 @@
         rel="stylesheet">
 </head>
 
-<body style="font-family: Inter; width: 100%; height: 100%; background-color: #cfc5c5;">
-    <div style="display: flex; flex-direction: column; min-height: 100vh;">
+<body>
+    <div class="central-container">
 
-        <div class="header">
-            <marquee><a href="https://www2.oabsp.org.br/asp/dotnet/LoginSite/LoginMain.aspx" class="no-link-style" target="_blank">
-                    <p style="padding-top: 0.5em;">Atualize seus dados cadastrais e participe das <label
-                            style="font-weight: bold;"> Eleições Online</label> da <label style="font-weight: bold;">OAB
-                            SP</label></p>
-                </a>
-            </marquee>
-        </div>
+        <div id="header"></div>
 
         <!-- Navbar -->
         <div id="navbar"></div>
