--- a/dirExecutiva.html
+++ b/dirExecutiva.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OAB Jandira</title>
     <link rel="stylesheet" href="assets/css/default.css">
-    <link rel="stylesheet" href="assets/css/home.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Inter Google -->
@@ -17,17 +16,10 @@
         rel="stylesheet">
 </head>
 
-<body style="font-family: Inter; width: 100%; height: 100%; font-weight: normal; background-color: #cfc5c5;">
-    <div style="display: flex; flex-direction: column; min-height: 100vh;">
+<body>
+    <div class="central-container">
 
-        <div class="header">
-            <marquee><a href="https://www2.oabsp.org.br/asp/dotnet/LoginSite/LoginMain.aspx" class="no-link-style" target="_blank">
-                    <p style="padding-top: 0.5em;">Atualize seus dados cadastrais e participe das <label
-                            style="font-weight: bold;"> Eleições Online</label> da <label style="font-weight: bold;">OAB
-                            SP</label></p>
-                </a>
-            </marquee>
-        </div>
+        <div id="header"></div>
 
         <!-- Navbar -->
         <div id="navbar"></div>
@@ -36,121 +28,13 @@
 
         <div class="main-content align-content-center" style="background-color: #182933;">
             <div class="col-12 col-md-6 mx-auto align-items-center">
-                <div id="carouselImgs" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="assets/images/home/banner-OABJandira.png" class="d-block w-100 img-fluid"
-                                alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="assets/images/home/banner-EleiçõesOAB.png" class="d-block w-100 img-fluid"
-                                alt="...">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselImgs"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselImgs"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
+                
             </div>
         </div>
 
 
         <!-- Acesso Rápido -->
-        <div class="main-content align-content-center my-5">
-            <h4 class="text-center mb-3" style="font-weight: bold;">Acesso Rápido</h4>
-
-            <div class="col-8 align-items-center align-content-center mx-auto">
-
-                <div class="row mt-md-2">
-                    <div class="col-md-6 mt-4 mt-md-2">
-                        <a href="contato.html" class="no-link-style">
-                            <div class="d-flex flex-row align-content-center align-items-center icons-fast-access">
-
-                                <img src="assets/icons/icon-Fale-com-oabjandira.svg " alt="" width="100px"
-                                    height="100px" class="rounded-4 p-2" />
-
-                                <p class="ms-2" style="margin: 0;">
-                                    <b>Fale com a OAB Jandira</b>
-                                    <br>
-                                    Entre em contato conosco.
-                                </p>
-
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="col-md-6 mt-4 mt-md-2">
-                        <a href="https://www.oabsp.org.br/servicos#modal=24-03-14-1158-tabela-de-honorarios%5b%21%5d0"
-                            target="_blank" class="no-link-style">
-                            <div class="d-flex flex-row align-content-center align-items-center icons-fast-access">
-
-                                <img src="assets/icons/icon-Tabela-de-honorarios.svg" alt="" width="100px"
-                                    height="100px" class="rounded-4 p-2" />
-
-                                <p class="ms-2" style="margin: 0;">
-                                    <b>Tabela de Honorários</b>
-                                    <br>
-                                    Consulte os valores indicados por serviço.
-                                </p>
-
-                            </div>
-                        </a>
-                    </div>
-
-                </div>
-
-                <div class="row mt-md-2">
-                    <div class="col-md-6 mt-4 mt-md-2 align-content-center">
-                        <a href="https://www.caasp.org.br/" target="_blank" class="no-link-style">
-                            <div class="d-flex flex-row  align-items-center icons-fast-access">
-
-                                <img src="assets/icons/icon-Caasp.svg" alt="" width="100px" height="100px"
-                                    class="rounded-4 p-2" />
-
-                                <p class="ms-2" style="margin: 0;">
-                                    <b>CAASP</b>
-                                    <br>
-                                    Caixa de Assistência <br>dos Advogados de São Paulo.
-                                </p>
-
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="col-md-6 mt-4 mt-md-2 align-content-center">
-                        <a href="#" target="_blank" class="no-link-style">
-
-                            <div class="d-flex flex-row align-items-center icons-fast-access">
-
-                                <img src="assets/icons/icon-Clube-de-beneficios.svg" alt="" width="100px" height="100px"
-                                    class="rounded-4 p-2" />
-
-                                <p class="ms-2" style="margin: 0;">
-                                    <b>Clube de Benefícios</b>
-                                    <br>
-                                    Consulte os benefícios disponíveis para os membros da OAB Jandira.
-                                </p>
-
-                            </div>
-                        </a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
+        <div id="fastAccess"></div>
 
         <div id="footer"></div>
     </div>
