--- a/comissoes.html
+++ b/comissoes.html
@@ -30,36 +30,8 @@
 
         <h1 class="d-flex justify-content-center" id="title-comissoes">Comissões</h1>
 
-        <!-- Acordeão -->
-
-        <div class="d-flex justify-content-center">
-            <div class="acordeao">
-                <button class="acordeao-header">
-                    <span class="title-comissoes">
-                        COMISSÃO DA JOVEM ADVOCACIA
-                    </span>
-                    <i class="fa-solid fa-chevron-down arrow"></i>
-                </button>
-
-                <div class="acordeao-body">
-                    <span class="acordeao-body-title">Presidente</span>
-                    <p>Dra. Fernanda Scopim<br>
-                        E-mail: fscopim@gmail.com</p>
-                    <span class="acordeao-body-title2">Vice Presidente</span>
-                    <p>Dr. Anderson Oliveira da Silva</p>
-                    <span class="acordeao-body-title2">Redes Sociais</span><br>
-                    <a href="#"><img src="assets/icons/icon-Instagram.svg" width="20px"></a><br>
-                    <span class="acordeao-body-title2">Membros Efetivos</span>
-                    <p class="p-body">Dra. Caroline Ingrid de Lima Gregório<br>
-                        Dra. Daniele Aparecida dos Santos Silva<br>
-                        Dra. Denise Lopes dos Santos<br>
-                        Dr. Kauê Teixeira Ventura Monteiro<br>
-                        Dra. Sarah Cristina Duarte Fortis<br>
-                        Dra. Sara Raiane de Souza Alves Barbosa<br>
-                        Dra. Priscila da Silva</p>
-                </div>
-            </div>
-        </div>
+        <!-- Accordions -->
+        <div id="comissoes" class="justify-content-center"></div>
 
         <!-- Acesso Rápido -->
         <div id="fastAccess"></div>
@@ -70,6 +42,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/default.js"></script>
+    <script src="assets/js/comissoes.js"></script>
 </body>
 
 </html>
