--- a/index.html
+++ b/index.html
@@ -41,12 +41,22 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/images/home/banner-OABJandira.png" class="d-block w-100 img-fluid"
-                                alt="...">
+                            <a href="contato.html">
+                                <img 
+                                    src="assets/images/home/banner-OABJandira.png" 
+                                    class="d-block w-100 img-fluid"
+                                    alt="..."
+                                >
+                            </a>
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/home/banner-EleiçõesOAB.png" class="d-block w-100 img-fluid"
-                                alt="...">
+                            <a href="https://www2.oabsp.org.br/asp/dotnet/LoginSite/LoginMain.aspx">
+                                <img 
+                                    src="assets/images/home/banner-EleiçõesOAB.png" 
+                                    class="d-block w-100 img-fluid"
+                                    alt="..."
+                                >
+                            </a>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselImgs"
