--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OAB Jandira</title>
     <meta name="description" content="Página oficial da OAB de Jandira">
     <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <!-- Bootstrap CSS -->
