--- a/dirExecutiva.html
+++ b/dirExecutiva.html
@@ -39,22 +39,22 @@
             <div class="dir-body">
                 <p class="dir-body-title">Paulo Oliveira</p>
                 <p>Presidente<br>
-                    2022-2024</p>
+                    <span class="dir-body-ano">2022-2024</span></p>
                 <br>
 
                 <p class="dir-body-title">Sonia Souza dos Santos</p>
                 <p>Vice-Presidente<br>
-                    2022-2024</p>
+                    <span class="dir-body-ano">2022-2024</span></p>
                 <br>
 
                 <p class="dir-body-title">Renato Pereira Gomes</p>
                 <p>Secretário Geral<br>
-                    2022-2024</p>
+                    <span class="dir-body-ano">2022-2024</span></p>
                 <br>
 
                 <p class="dir-body-title">Elaine Carvalho de Aquino</p>
                 <p>Tesoureira<br>
-                    2022-2024</p>
+                    <span class="dir-body-ano">2022-2024</span></p>
                 <br>
             </div>
 
