Correção de titulos

--- a/comissoes.html
+++ b/comissoes.html
@@ -31,7 +31,7 @@
         <!-- Navbar -->
         <div id="navbar"></div>
 
-        <h1 class="d-flex justify-content-center" id="title-comissoes">Comissões</h1>
+        <h1 class="dir-title1">Comissões</h1>
 
         <!-- Accordions -->
         <div id="comissoes" class="justify-content-center"></div>
