--- a/club.html
+++ b/club.html
@@ -31,7 +31,7 @@
         <!-- Navbar -->
         <div id="navbar"></div>
 
-        <h1 class="d-flex justify-content-center" id="title-club">Clube de Benefícios</h1>
+        <h1 class="dir-title1">Clube de Benefícios</h1>
 
         <!-- Acordeão -->
 
