--- a/dirExecutiva.html
+++ b/dirExecutiva.html
@@ -35,28 +35,38 @@
         <h1 class="dir-title1">Diretoria Executiva 2022-2024</h1>
         <br>
 
-        <div class="d-flex justify-content-center">
-            <div class="dir-body">
-                <p class="dir-body-title">Paulo Oliveira</p>
-                <p>Presidente<br>
-                    <span class="dir-body-ano">2022-2024</span></p>
-                <br>
+        <div class="main-content">
+            <div class="row justify-content-center me-0">
+                <div class="col-lg-3">
+                    <div class="dir-body">
+                        <p class="dir-body-title">Paulo Oliveira</p>
+                        <p>Presidente<br>
+                            <span class="dir-body-ano">2022-2024</span>
+                        </p>
+                        <br>
 
-                <p class="dir-body-title">Sonia Souza dos Santos</p>
-                <p>Vice-Presidente<br>
-                    <span class="dir-body-ano">2022-2024</span></p>
-                <br>
+                        <p class="dir-body-title">Sonia Souza dos Santos</p>
+                        <p>Vice-Presidente<br>
+                            <span class="dir-body-ano">2022-2024</span>
+                        </p>
+                        <br>
 
-                <p class="dir-body-title">Renato Pereira Gomes</p>
-                <p>Secretário Geral<br>
-                    <span class="dir-body-ano">2022-2024</span></p>
-                <br>
+                        <p class="dir-body-title">Renato Pereira Gomes</p>
+                        <p>Secretário Geral<br>
+                            <span class="dir-body-ano">2022-2024</span>
+                        </p>
+                        <br>
 
-                <p class="dir-body-title">Elaine Carvalho de Aquino</p>
-                <p>Tesoureira<br>
-                    <span class="dir-body-ano">2022-2024</span></p>
-                <br>
+                        <p class="dir-body-title">Elaine Carvalho de Aquino</p>
+                        <p>Tesoureira<br>
+                            <span class="dir-body-ano">2022-2024</span>
+                        </p>
+                        <br>
+                    </div>
+                </div>
+
             </div>
+
 
         </div>
 
