ajuste club e marquee

--- a/dirExecutiva.html
+++ b/dirExecutiva.html
@@ -32,34 +32,34 @@
         <div id="navbar"></div>
 
 
-        <h1 class="dir-title1">Diretoria Executiva 2022-2024</h1>
+        <h1 class="dir-title1">Diretoria Executiva</h1>
         <br>
 
         <div class="main-content">
             <div class="row justify-content-center me-0">
-                <div class="col-lg-3">
+                <div class="col-lg-5">
                     <div class="dir-body">
                         <p class="dir-body-title">Paulo Oliveira</p>
                         <p>Presidente<br>
-                            <span class="dir-body-ano">2022-2024</span>
+                        <p class="dir-body-ano">2022-2024</p>
                         </p>
                         <br>
 
                         <p class="dir-body-title">Sonia Souza dos Santos</p>
                         <p>Vice-Presidente<br>
-                            <span class="dir-body-ano">2022-2024</span>
+                        <p class="dir-body-ano">2022-2024</p>
                         </p>
                         <br>
 
                         <p class="dir-body-title">Renato Pereira Gomes</p>
                         <p>Secretário Geral<br>
-                            <span class="dir-body-ano">2022-2024</span>
+                        <p class="dir-body-ano">2022-2024</p>
                         </p>
                         <br>
 
                         <p class="dir-body-title">Elaine Carvalho de Aquino</p>
                         <p>Tesoureira<br>
-                            <span class="dir-body-ano">2022-2024</span>
+                        <p class="dir-body-ano">2022-2024</p>
                         </p>
                         <br>
                     </div>
