Ajustes do Title

--- a/dirExecutiva.html
+++ b/dirExecutiva.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OAB Jandira</title>
-    <meta name="description" content="Página oficial da OAB de Jandira">
-    <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
+    <meta name="description" content="Direção Executiva | Página oficial da OAB de Jandira">
+    <meta name="keywords" content="direção executiva, presidente, vicepresidente, oabjandira, direito, jandira, advocacia, oab">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/home.css">
