--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OAB Jandira</title>
+    <meta http-equiv="refresh" content="30">
     <meta name="description" content="Página oficial da OAB de Jandira">
     <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
+    <title>OAB Jandira | Casa do Advogado de Jandira</title>
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/home.css">
