ajustes titulos paginas

--- a/club.html
+++ b/club.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OAB Jandira</title>
+    <title>Clube de Benefícios | OAB Jandira</title>
     <meta name="description" content="Clube de Benefícios | Página oficial da OAB de Jandira">
     <meta name="keywords" content="clube de Benefícios, oabjandira, direito, jandira, advocacia, oab">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
