--- a/comissoes.html
+++ b/comissoes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OAB Jandira</title>
+    <title>Comissões | OAB Jandira</title>
     <meta name="description" content="Comissões | Página oficial da OAB de Jandira">
     <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
