--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OAB Jandira</title>
+    <title>Contato | OAB Jandira</title>
     <meta name="description" content="Contato | Página oficial da OAB de Jandira">
     <meta name="keywords" content="contato, telefone, email, localização, onde fica, oabjandira, direito, jandira, advocacia, oab">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
