feat: Add canonical ref

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="refresh" content="30">
     <meta name="description" content="Página oficial da OAB de Jandira">
     <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
-    <title>OAB Jandira | Casa do Advogado de Jandira</title>
+    <title>OAB Jandira</title>
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/home.css">
@@ -18,10 +18,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"
+    />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" 
+    />
+    <link rel="canonical" href="https://oabjandira.org.br" />
 </head>
 
 <body>
