fix: Voltando  title home

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="refresh" content="30">
     <meta name="description" content="Página oficial da OAB de Jandira">
     <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
-    <title>OAB Jandira</title>
+    <title>OAB Jandira | Casa do Advogado de Jandira</title>
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/home.css">
