--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="carousel-item">
                             <a href="https://www2.oabsp.org.br/asp/dotnet/LoginSite/LoginMain.aspx">
                                 <img 
-                                    src="assets/images/home/banner-EleiçõesOAB.png" 
+                                    src="assets/images/home/banner-OABJandira.png" 
                                     class="d-block w-100 img-fluid"
                                     alt="..."
                                 >
