--- a/formulario-comissoes.html
+++ b/formulario-comissoes.html
@@ -35,7 +35,7 @@
         <div id="navbar"></div>
 
 
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScBJyDQFMsAyKfJFSZsl1kPcpyqXp2Cdu5rkFsoXt5dcLOX7g/viewform?embedded=true" width="100%" height="3138" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScBJyDQFMsAyKfJFSZsl1kPcpyqXp2Cdu5rkFsoXt5dcLOX7g/viewform?embedded=true" width="100%" height="3138" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
 
 
         <!-- Acesso Rápido -->
