--- a/formulario-comissoes.html
+++ b/formulario-comissoes.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Direção Executiva | OAB Jandira</title>
     <meta name="description" content="Direção Executiva | Página oficial da OAB de Jandira">
-    <meta name="keywords" content="direção executiva, presidente, vicepresidente, oabjandira, direito, jandira, advocacia, oab">
+    <meta name="keywords"
+        content="direção executiva, presidente, vicepresidente, oabjandira, direito, jandira, advocacia, oab">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/home.css">
@@ -17,25 +18,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet"
-    />
+        rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" 0
-    />
+        crossorigin="anonymous" referrerpolicy="no-referrer" 0 />
     <link rel="canonical" href="https://oabjandira.org.br/direcao.html" />
 </head>
 
 <body>
     <div class="central-container">
 
-        <div id="header"></div>
 
-        <!-- Navbar -->
-        <div id="navbar"></div>
-
-
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScBJyDQFMsAyKfJFSZsl1kPcpyqXp2Cdu5rkFsoXt5dcLOX7g/viewform?embedded=true" width="100%" height="3138" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+        <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLScBJyDQFMsAyKfJFSZsl1kPcpyqXp2Cdu5rkFsoXt5dcLOX7g/viewform?embedded=true"
+            width="80%" height="3138" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
 
 
         <!-- Acesso Rápido -->
