--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             aria-label="Slide 2"></button>
                     </div>
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <a href="contato.html">
                                 <img 
                                     src="assets/images/home/banner-OABJandira.png" 
@@ -56,10 +56,10 @@
                                 >
                             </a>
                         </div>
-                        <div class="carousel-item">
-                            <a href="https://www2.oabsp.org.br/asp/dotnet/LoginSite/LoginMain.aspx">
+                        <div class="carousel-item active">
+                            <a href="https://forms.gle/inCBZuDtkU28VoHt7" target="_blank">
                                 <img 
-                                    src="assets/images/home/banner-OABJandira.png" 
+                                    src="assets/images/home/Banner-Comissoes.png" 
                                     class="d-block w-100 img-fluid"
                                     alt="..."
                                 >
