--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="main-content align-content-center" style="background-color: #ccc;">
             <div class="col-12 col-md-6 mx-auto align-items-center">
                 <div id="carouselImgs" class="carousel slide" data-bs-ride="carousel">
-                    <!--<div class="carousel-indicators">
+                    <!--<div class="carousel-indicators crizan">
                         <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="1"
@@ -93,3 +93,4 @@
 
 
 </html>
+
