--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </a>
                         </div>-->
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselImgs"
+                    <!--<button class="carousel-control-prev" type="button" data-bs-target="#carouselImgs"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
@@ -75,7 +75,7 @@
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
-                    </button>
+                    </button>-->
                 </div>
             </div>
         </div>
@@ -93,4 +93,5 @@
 
 
 </html>
+
 
