--- a/index.html
+++ b/index.html
@@ -1,97 +1,97 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+    <!DOCTYPE html>
+    <html lang="pt-BR">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="30">
-    <meta name="description" content="Página oficial da OAB de Jandira">
-    <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
-    <title>OAB Jandira | Casa do Advogado de Jandira</title>
-    <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
-    <link rel="stylesheet" href="assets/css/default.css">
-    <link rel="stylesheet" href="assets/css/home.css">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Inter Google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" 
-    />
-    <link rel="canonical" href="https://oabjandira.org.br" />
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+        <meta name="description" content="Página oficial da OAB de Jandira">
+        <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
+        <title>OAB Jandira | Casa do Advogado de Jandira</title>
+        <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
+        <link rel="stylesheet" href="assets/css/default.css">
+        <link rel="stylesheet" href="assets/css/home.css">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Font Inter Google -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" 
+        />
+        <link rel="canonical" href="https://oabjandira.org.br" />
+    </head>
 
-<body>
-    <div class="central-container">
+    <body>
+        <div class="central-container">
 
-        <div id="header"></div>
+            <div id="header"></div>
 
-        <!-- Navbar -->
-        <div id="navbar"></div>
+            <!-- Navbar -->
+            <div id="navbar"></div>
 
-        <!-- Carrossel -->
+            <!-- Carrossel -->
 
-        <div class="main-content align-content-center" style="background-color: #ccc;">
-            <div class="col-12 col-md-6 mx-auto align-items-center">
-                <div id="carouselImgs" class="carousel slide" data-bs-ride="carousel">
-                    <!--<div class="carousel-indicators crizan">
-                        <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                    </div>-->
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <a href="contato.html">
-                                <img 
-                                    src="assets/images/home/banner-OABJandira.png" 
-                                    class="d-block w-100 img-fluid"
-                                    alt="..."
-                                >
-                            </a>
-                        </div>
-                        <!--<div class="carousel-item">
-                            <a href="formulario-comissoes.html" target="_blank">
-                                <img 
-                                    src="assets/images/home/Banner-Comissoes.png" 
-                                    class="d-block w-100 img-fluid"
-                                    alt="..."
-                                >
-                            </a>
+            <div class="main-content align-content-center">
+                <div class="col-12 col-md-12">
+                    <div id="carouselImgs" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                        <!--<div class="carousel-indicators crizan">
+                            <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="0" class="active"
+                                aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
                         </div>-->
+
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" style="background-color: #182933;">
+                                <a href="contato.html">
+                                    <img 
+                                        src="assets/images/home/Banner - OAB Jandira 1.jpg" 
+                                        class=" d-block carousel-img"
+                                        alt="..."
+                                    >
+                                </a>
+                            </div>
+                            <!-- <div class="carousel-item" style="background-color: #F7F7F8;">
+                                <a href="https://www.instagram.com/oab.jandira" target="_blank">
+                                    <img 
+                                        src="assets/images/home/Banner - Agenda Outubro 2.jpg" 
+                                        class=" d-block carousel-img"
+                                        alt="..."
+                                    >
+                                </a>
+                            </div> -->
+                        </div>
+                        <!--<button class="carousel-control-prev" type="button" data-bs-target="#carouselImgs"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselImgs"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>-->
                     </div>
-                    <!--<button class="carousel-control-prev" type="button" data-bs-target="#carouselImgs"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselImgs"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>-->
                 </div>
             </div>
+
+            <!-- Acesso Rápido -->
+            <div id="fastAccess"></div>
+
+            <div id="footer"></div>
         </div>
 
-        <!-- Acesso Rápido -->
-        <div id="fastAccess"></div>
-
-        <div id="footer"></div>
-    </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/default.js"></script>
-</body>
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/default.js"></script>
+    </body>
 
 
-</html>
+    </html>
 
 
