--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
                             <div class="carousel-item active" style="background-color: #182933;">
                                 <a href="contato.html">
                                     <img 
-                                        src="assets/images/home/Banner - OAB Jandira 1.jpg" 
+                                        src="assets/images/home/Banner - 1.png" 
                                         class=" d-block carousel-img"
                                         alt="..."
                                     >
                                 </a>
                             </div>
-                            <!-- <div class="carousel-item" style="background-color: #F7F7F8;">
+                            <div class="carousel-item" style="background-color: #F7F7F8;">
                                 <a href="https://www.instagram.com/oab.jandira" target="_blank">
                                     <img 
-                                        src="assets/images/home/Banner - Agenda Outubro 2.jpg" 
+                                        src="assets/images/home/Banner - 2.png" 
                                         class=" d-block carousel-img"
                                         alt="..."
                                     >
                                 </a>
-                            </div> -->
+                            </div>
                         </div>
                         <!--<button class="carousel-control-prev" type="button" data-bs-target="#carouselImgs"
                             data-bs-slide="prev">
